removed image from search box in left navbar again. Both current implementation is broken in all tested browsers (image in wrong place, doesn't display consistently). Commented out code which added it back in for continuation of work on implementation if desired. Reverted search bar width to previous percentage value. Current fixed width CSS is too wide by default on all tested browsers, and doesn't scale for smaller screens. Having waited several days for these problems (introduced in commits 18647-18649) to be resolved, I've reverted them back to their previous working state.
svn path=/branches/design/; revision=18713

--- a/look/generic.css
+++ b/look/generic.css
@@ -222,8 +222,10 @@ ul {
 }
 
 #search input[type="text"] {
-  padding-left: 30px;
-  width: 150px;
+  /*padding-left: 30px;
+  width: 150px;*/
+  width: 80%;
+  padding: 5px 8px;
 }
 
 #search p {
